<resources>
    <string name="app_name">AndroidApp</string>
    <string name="mainTitle">Sorry! Plus</string>
    <string name="statsButton">Stats</string>
    <string name="openClan">Open</string>
    <string name="closedClan">Closed</string>
    <string name="toast_text">Clan has been successfully added</string>
    <string name="noClan">noClan</string>
</resources>